apps/jupyterhub/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: jupyterhub
spec:
  redirectScheme:
    scheme: https
    permanent: true
