apps/jupyterhub/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jupyterhub-http
  namespace: jupyterhub
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jupyter.mlops.work`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: proxy-public
          port: 80
