apps/jupyterhub/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jupyterhub-https
  namespace: jupyterhub
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jupyter.mlops.work`)
      kind: Rule
      services:
        - name: proxy-public
          port: 80
  tls:
    # This matches the secretName defined in certificate.yaml
    secretName: jupyter-wildcard-tls
